# IEEE_sample_bot

devel/: .catkin
devel/include/control/: FourWheeler.h
devel/lib/pkgconfig/: control.pc  description.pc  mastering_ros_robot_description_pkg.pc  simulation.pc
devel/lib/python2.7/dist-packages/control/msg/: _FourWheeler.py  __init__.py
devel/share/common-lisp/ros/control/msg/: FourWheeler.lisp  _package.lisp  _package_FourWheeler.lisp  control-msg.asd
devel/share/control/cmake/: control-msg-paths.cmake  controlConfig.cmake
devel/share/description/cmake/: descriptionConfig.cmake
devel/share/gennodejs/ros/control/msg/: FourWheeler.js  _index.js
devel/share/mastering_ros_robot_description_pkg/cmake/: mastering_ros_robot_description_pkgConfig.cmake
devel/share/roseus/ros/control/: manifest.l
devel/share/simulation/cmake/: simulationConfig.cmake
docs/: readme.txt
docs/Documentation_sample_bot/: Documentation.md
src/amcl_launcher/: CMakeLists.txt  package.xml
src/amcl_launcher/launch/: amcl.launch
src/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/control/: CMakeLists.txt
src/control/plugins/src/: four_wheel_differential.cc
src/control/scripts/: control_publisher.py  keyboard_driver.py
src/description/: package.xml
src/description/launch/: display_bot.launch  display_world.launch
src/description/urdf/: body.xacro  circle_body.xacro  plugins.xacro
src/description/worlds/: maze_world  mazewithbot
src/mapping_launch/: CMakeLists.txt  package.xml
src/mapping_launch/launch/: g_mapping.launch
src/maps/: jackal_race.yaml  mymap.pgm  mymap.yaml
src/simulation/launch/: amcl.launch  steer.launch  steer_maze.launch
src/simulation/param/: base_local_planner_params.yaml   costmap_common_params.yaml
(+1 files in other folders)
